/* SPDX-License-Identifier: GPL-3.0+ */
/*
 *  This file is part of aasdk library project.
 *  Copyright (C) 2018 f1x.studio (Michal Szwaj)
 */

syntax = "proto2";

message ServiceDiscoveryRequest {
  required string device_name = 4;
  required string device_brand = 5;
}
